z-index issue

--- a/sass/_generic.scss
+++ b/sass/_generic.scss
@@ -75,7 +75,7 @@
 			bottom: -8px;
 			left: -8px;
 			right: -8px;
-			z-index: 1;
+			z-index: -1;
 		}
 		.textwidget, ul, form{
 			position: relative;
